@@ -22,10 +22,14 @@ package com.walmartlabs.concord.dependencymanager;
 
 import com.walmartlabs.concord.common.ExceptionUtils;
 import org.apache.maven.repository.internal.MavenRepositorySystemUtils;
-import org.eclipse.aether.*;
+import org.eclipse.aether.DefaultRepositorySystemSession;
+import org.eclipse.aether.RepositorySystem;
+import org.eclipse.aether.RepositorySystemSession;
 import org.eclipse.aether.artifact.Artifact;
 import org.eclipse.aether.artifact.DefaultArtifact;
 import org.eclipse.aether.collection.CollectRequest;
+import org.eclipse.aether.collection.DependencyCollectionContext;
+import org.eclipse.aether.collection.DependencySelector;
 import org.eclipse.aether.graph.Dependency;
 import org.eclipse.aether.repository.LocalRepository;
 import org.eclipse.aether.repository.Proxy;
@@ -34,13 +38,19 @@ import org.eclipse.aether.repository.RepositoryPolicy;
 import org.eclipse.aether.resolution.*;
 import org.eclipse.aether.transfer.AbstractTransferListener;
 import org.eclipse.aether.transfer.ArtifactNotFoundException;
+import org.eclipse.aether.transfer.RepositoryOfflineException;
 import org.eclipse.aether.transfer.TransferEvent;
 import org.eclipse.aether.util.artifact.JavaScopes;
+import org.eclipse.aether.util.filter.ExclusionsDependencyFilter;
+import org.eclipse.aether.util.graph.selector.AndDependencySelector;
+import org.eclipse.aether.util.graph.selector.ExclusionDependencySelector;
+import org.eclipse.aether.util.graph.selector.OptionalDependencySelector;
 import org.eclipse.aether.util.repository.AuthenticationBuilder;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import javax.inject.Inject;
+import javax.inject.Singleton;
 import javax.xml.bind.DatatypeConverter;
 import java.io.IOException;
 import java.io.InputStream;
@@ -48,12 +58,14 @@ import java.io.OutputStream;
 import java.io.UnsupportedEncodingException;
 import java.net.URI;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.*;
 import java.security.MessageDigest;
 import java.util.*;
 import java.util.concurrent.Callable;
 import java.util.stream.Collectors;
 
+@Singleton
 public class DependencyManager {
 
     private static final Logger log = LoggerFactory.getLogger(DependencyManager.class);
@@ -63,6 +75,7 @@ public class DependencyManager {
 
     private static final String FILES_CACHE_DIR = "files";
     public static final String MAVEN_SCHEME = "mvn";
+    private static final String LATEST = "LATEST";
 
     private final Path cacheDir;
     private final Path localCacheDir;
@@ -70,6 +83,11 @@ public class DependencyManager {
     private final Object mutex = new Object();
     private final RepositorySystem maven;
     private final boolean strictRepositories;
+
+    private final List<String> defaultExclusions;
+
+    private final boolean explicitlyResolveV1Client;
+    private final boolean offlineMode;
 
     @Inject
     public DependencyManager(DependencyManagerConfiguration cfg) throws IOException {
@@ -83,6 +101,9 @@ public class DependencyManager {
         this.repositories = toRemote(cfg.repositories());
         this.maven = RepositorySystemFactory.create();
         this.strictRepositories = cfg.strictRepositories();
+        this.defaultExclusions = cfg.exclusions();
+        this.explicitlyResolveV1Client = cfg.explicitlyResolveV1Client();
+        this.offlineMode = cfg.offlineMode();
     }
 
     public Collection<DependencyEntity> resolve(Collection<URI> items) throws IOException {
@@ -92,7 +113,7 @@ public class DependencyManager {
     public Collection<DependencyEntity> resolve(Collection<URI> items, ProgressListener listener) throws IOException {
         ResolveExceptionConverter exceptionConverter = new ResolveExceptionConverter(items);
         ProgressNotifier progressNotifier = new ProgressNotifier(listener, exceptionConverter);
-        return withRetry(RETRY_COUNT, RETRY_INTERVAL, () -> tryResolve(items, progressNotifier), exceptionConverter, progressNotifier);
+        return withRetry(() -> tryResolve(items, progressNotifier), exceptionConverter, progressNotifier);
     }
 
     public DependencyEntity resolveSingle(URI item) throws IOException {
@@ -102,7 +123,7 @@ public class DependencyManager {
     public DependencyEntity resolveSingle(URI item, ProgressListener listener) throws IOException {
         ResolveExceptionConverter exceptionConverter = new ResolveExceptionConverter(item);
         ProgressNotifier progressNotifier = new ProgressNotifier(listener, exceptionConverter);
-        return withRetry(RETRY_COUNT, RETRY_INTERVAL, () -> tryResolveSingle(item, progressNotifier), exceptionConverter, progressNotifier);
+        return withRetry(() -> tryResolveSingle(item, progressNotifier), exceptionConverter, progressNotifier);
     }
 
     private Collection<DependencyEntity> tryResolve(Collection<URI> items, ProgressNotifier progressNotifier) throws IOException {
@@ -120,13 +141,13 @@ public class DependencyManager {
 
         result.addAll(resolveDirectLinks(deps.directLinks));
 
-        result.addAll(resolveMavenTransitiveDependencies(deps.mavenTransitiveDependencies, progressNotifier).stream()
+        result.addAll(resolveMavenTransitiveDependencies(deps.mavenTransitiveDependencies, deps.mavenExclusions, progressNotifier).stream()
                 .map(DependencyManager::toDependency)
-                .collect(Collectors.toList()));
+                .toList());
 
         result.addAll(resolveMavenSingleDependencies(deps.mavenSingleDependencies, progressNotifier).stream()
                 .map(DependencyManager::toDependency)
-                .collect(Collectors.toList()));
+                .toList());
 
         return result;
     }
@@ -145,6 +166,7 @@ public class DependencyManager {
     private DependencyList categorize(List<URI> items) throws IOException {
         List<MavenDependency> mavenTransitiveDependencies = new ArrayList<>();
         List<MavenDependency> mavenSingleDependencies = new ArrayList<>();
+        List<String> mavenExclusions = new ArrayList<>();
         List<URI> directLinks = new ArrayList<>();
 
         for (URI item : items) {
@@ -154,21 +176,23 @@ public class DependencyManager {
 
                 Artifact artifact = new DefaultArtifact(id);
 
-                Map<String, String> cfg = splitQuery(item);
-                String scope = cfg.getOrDefault("scope", JavaScopes.COMPILE);
-                boolean transitive = Boolean.parseBoolean(cfg.getOrDefault("transitive", "true"));
+                Map<String, List<String>> cfg = splitQuery(item);
+                String scope = getSingleValue(cfg, "scope", JavaScopes.COMPILE);
+                boolean transitive = Boolean.parseBoolean(getSingleValue(cfg, "transitive", "true"));
 
                 if (transitive) {
                     mavenTransitiveDependencies.add(new MavenDependency(artifact, scope));
                 } else {
                     mavenSingleDependencies.add(new MavenDependency(artifact, scope));
                 }
+
+                mavenExclusions.addAll(cfg.getOrDefault("exclude", Collections.emptyList()));
             } else {
                 directLinks.add(item);
             }
         }
 
-        return new DependencyList(mavenTransitiveDependencies, mavenSingleDependencies, directLinks);
+        return new DependencyList(mavenTransitiveDependencies, mavenSingleDependencies, mavenExclusions, directLinks);
     }
 
     private Collection<DependencyEntity> resolveDirectLinks(Collection<URI> items) throws IOException {
@@ -224,7 +248,7 @@ public class DependencyManager {
     }
 
     private Artifact resolveMavenSingle(MavenDependency dep, ProgressNotifier progressNotifier) throws IOException {
-        RepositorySystemSession session = newRepositorySystemSession(maven, progressNotifier);
+        RepositorySystemSession session = getRepositorySession(Collections.singletonList(dep), maven, progressNotifier);
 
         ArtifactRequest req = new ArtifactRequest();
         req.setArtifact(dep.artifact);
@@ -240,6 +264,18 @@ public class DependencyManager {
         }
     }
 
+    private RepositorySystemSession getRepositorySession(Collection<MavenDependency> mavenDependencies, RepositorySystem system, ProgressNotifier progressNotifier) {
+        boolean isLatest = mavenDependencies.stream()
+                .map(d -> d.artifact.getVersion())
+                .anyMatch(a -> a.equals(LATEST));
+
+        if (isLatest) {
+            return newRepositorySystemSession(system, progressNotifier, true);
+        }
+
+        return newRepositorySystemSession(system, progressNotifier);
+    }
+
     private Collection<Artifact> resolveMavenSingleDependencies(Collection<MavenDependency> deps, ProgressNotifier progressNotifier) throws IOException {
         Collection<Artifact> paths = new HashSet<>();
         for (MavenDependency dep : deps) {
@@ -248,10 +284,10 @@ public class DependencyManager {
         return paths;
     }
 
-    private Collection<Artifact> resolveMavenTransitiveDependencies(Collection<MavenDependency> deps, ProgressNotifier progressNotifier) throws IOException {
+    private Collection<Artifact> resolveMavenTransitiveDependencies(Collection<MavenDependency> deps, List<String> exclusions, ProgressNotifier progressNotifier) throws IOException {
         // TODO: why we need new RepositorySystem?
         RepositorySystem system = RepositorySystemFactory.create();
-        RepositorySystemSession session = newRepositorySystemSession(system, progressNotifier);
+        RepositorySystemSession session = getRepositorySession(deps, system, progressNotifier);
 
         CollectRequest req = new CollectRequest();
         req.setDependencies(deps.stream()
@@ -259,7 +295,13 @@ public class DependencyManager {
                 .collect(Collectors.toList()));
         req.setRepositories(repositories);
 
-        DependencyRequest dependencyRequest = new DependencyRequest(req, null);
+        List<String> excludes = new ArrayList<>(exclusions);
+        excludes.addAll(defaultExclusions);
+
+        DependencyRequest dependencyRequest = new DependencyRequest(req, new ExclusionsDependencyFilter(excludes));
+        if (explicitlyResolveV1Client) {
+            dependencyRequest.getCollectRequest().addManagedDependency(new Dependency(ClientDepSelector.CLIENT1_ARTIFACT, ""));
+        }
 
         synchronized (mutex) {
             try {
@@ -274,9 +316,21 @@ public class DependencyManager {
     }
 
     private DefaultRepositorySystemSession newRepositorySystemSession(RepositorySystem system, ProgressNotifier progressNotifier) {
+        return newRepositorySystemSession(system, progressNotifier, false);
+    }
+
+    private DefaultRepositorySystemSession newRepositorySystemSession(RepositorySystem system, ProgressNotifier progressNotifier, boolean updatePolicy) {
         DefaultRepositorySystemSession session = MavenRepositorySystemUtils.newSession();
         session.setChecksumPolicy(RepositoryPolicy.CHECKSUM_POLICY_IGNORE);
         session.setIgnoreArtifactDescriptorRepositories(strictRepositories);
+        if (explicitlyResolveV1Client) {
+            DependencySelector selector = new AndDependencySelector(
+                    new ClientDepSelector(),
+                    new OptionalDependencySelector(),
+                    new ExclusionDependencySelector());
+
+            session.setDependencySelector(selector);
+        }
 
         LocalRepository localRepo = new LocalRepository(localCacheDir.toFile());
         session.setLocalRepositoryManager(system.newLocalRepositoryManager(session, localRepo));
@@ -287,17 +341,11 @@ public class DependencyManager {
             }
         });
 
-        session.setRepositoryListener(new AbstractRepositoryListener() {
-            @Override
-            public void artifactResolving(RepositoryEvent event) {
-                log.debug("artifactResolving -> {}", event);
-            }
+        session.setOffline(offlineMode);
 
-            @Override
-            public void artifactResolved(RepositoryEvent event) {
-                log.debug("artifactResolved -> {}", event);
-            }
-        });
+        if (updatePolicy) {
+            session.setUpdatePolicy(RepositoryPolicy.UPDATE_POLICY_ALWAYS);
+        }
 
         return session;
     }
@@ -366,35 +414,95 @@ public class DependencyManager {
         return b.build();
     }
 
-    private static Map<String, String> splitQuery(URI uri) throws UnsupportedEncodingException {
+    private static String getSingleValue(Map<String, List<String>> m, String k, String defaultValue) {
+        List<String> vv = m.get(k);
+        if (vv == null || vv.isEmpty()) {
+            return defaultValue;
+        }
+        return vv.get(0);
+    }
+
+    private static Map<String, List<String>> splitQuery(URI uri) throws UnsupportedEncodingException {
         String query = uri.getQuery();
         if (query == null || query.isEmpty()) {
             return Collections.emptyMap();
         }
 
-        Map<String, String> m = new LinkedHashMap<>();
+        Map<String, List<String>> m = new LinkedHashMap<>();
         String[] pairs = query.split("&");
         for (String pair : pairs) {
             int idx = pair.indexOf("=");
-            String k = pair.substring(0, idx);
-            String v = pair.substring(idx + 1);
-            m.put(URLDecoder.decode(k, "UTF-8"), URLDecoder.decode(v, "UTF-8"));
+            String k = URLDecoder.decode(pair.substring(0, idx), StandardCharsets.UTF_8);
+            String v = URLDecoder.decode(pair.substring(idx + 1), StandardCharsets.UTF_8);
+
+            List<String> vv = m.computeIfAbsent(k, s -> new ArrayList<>());
+            vv.add(v);
+            m.put(k, vv);
         }
         return m;
+    }
+
+    private static class ClientDepSelector implements DependencySelector {
+
+        private static final String CONCORD_CLIENT_GROUP_ID = "com.walmartlabs.concord";
+        private static final String CONCORD_CLIENT_ARTIFACT_ID = "concord-client";
+
+        public static final Artifact CLIENT1_ARTIFACT = new DefaultArtifact(CONCORD_CLIENT_GROUP_ID, CONCORD_CLIENT_ARTIFACT_ID, "jar", Version.get());
+
+        private final boolean transitive;
+        private final Collection<String> excluded;
+
+        public ClientDepSelector() {
+            this(false, Arrays.asList("test", "provided"));
+        }
+
+        public ClientDepSelector(boolean transitive, Collection<String> excluded) {
+            this.transitive = transitive;
+            this.excluded = excluded;
+        }
+
+        @Override
+        public boolean selectDependency(Dependency dependency) {
+            if (CONCORD_CLIENT_GROUP_ID.equals(dependency.getArtifact().getGroupId()) &&
+                CONCORD_CLIENT_ARTIFACT_ID.equals(dependency.getArtifact().getArtifactId())) {
+                return true;
+            }
+
+            if (!transitive) {
+                return true;
+            }
+
+            String scope = dependency.getScope();
+            return !excluded.contains(scope);
+        }
+
+        @Override
+        public DependencySelector deriveChildSelector(DependencyCollectionContext context) {
+            if (this.transitive || context.getDependency() == null) {
+                return this;
+            }
+
+            return new ClientDepSelector(true, excluded);
+        }
     }
 
     private static final class DependencyList {
 
         private final List<MavenDependency> mavenTransitiveDependencies;
         private final List<MavenDependency> mavenSingleDependencies;
+
+        private final List<String> mavenExclusions;
+
         private final List<URI> directLinks;
 
         private DependencyList(List<MavenDependency> mavenTransitiveDependencies,
                                List<MavenDependency> mavenSingleDependencies,
+                               List<String> mavenExclusions,
                                List<URI> directLinks) {
 
             this.mavenTransitiveDependencies = mavenTransitiveDependencies;
             this.mavenSingleDependencies = mavenSingleDependencies;
+            this.mavenExclusions = mavenExclusions;
             this.directLinks = directLinks;
         }
     }
@@ -422,28 +530,31 @@ public class DependencyManager {
 
         @Override
         public void onRetry(int tryCount, int retryCount, long retryInterval, Exception e) {
-            if (listener != null) {
-                DependencyManagerException ex = exceptionConverter.convert(e);
-                listener.onRetry(tryCount, retryCount, retryInterval, ex.getMessage());
+            if (listener == null) {
+                return;
             }
+
+            DependencyManagerException ex = exceptionConverter.convert(e);
+            listener.onRetry(tryCount, retryCount, retryInterval, ex.getMessage());
         }
 
         public void transferFailed(TransferEvent event) {
-            log.error("transferFailed -> {}", event);
-
-            if (event != null && listener != null) {
-                listener.onTransferFailed(event.toString());
+            if (listener == null || event == null) {
+                return;
             }
+
+            String error = Optional.ofNullable(event.getException()).map(Throwable::toString).orElse("n/a");
+            listener.onTransferFailed(event + ", error: " + error);
         }
     }
 
-    public static <T> T withRetry(int retryCount, long retryInterval, Callable<T> c,
-                                  ResolveExceptionConverter exceptionConverter,
-                                  ProgressNotifier notifier) throws IOException {
+    private static <T> T withRetry(Callable<T> c,
+                                   ResolveExceptionConverter exceptionConverter,
+                                   ProgressNotifier notifier) throws IOException {
         try {
-            return RetryUtils.withRetry(retryCount, retryInterval, c, ResolveRetryStrategy.INSTANCE, notifier);
+            return RetryUtils.withRetry(DependencyManager.RETRY_COUNT, DependencyManager.RETRY_INTERVAL,
+                    c, ResolveRetryStrategy.INSTANCE, notifier);
         } catch (Exception e) {
-            log.error("resolve exception: ", e);
             throw exceptionConverter.convert(e);
         }
     }
@@ -456,7 +567,7 @@ public class DependencyManager {
         public boolean canRetry(Exception e) {
             List<Throwable> exceptions = ExceptionUtils.getExceptionList(e);
             Throwable last = exceptions.get(exceptions.size() - 1);
-            return !(last instanceof ArtifactNotFoundException);
+            return !((last instanceof RepositoryOfflineException) || (last instanceof ArtifactNotFoundException));
         }
     }
 }
